<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GestaoRH</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="nome">Nome: </string>
    <string name="endereco">Endereço:</string>
    <string name="rg">R.G.:</string>
    <string name="cpf">CPF:</string>
    <string name="dataNasc">Data de Nascimento:</string>
    <string name="data">Data:</string>
    <string name="escolaridade">Escolaridade:</string>
    <string name="instEnsino">Instituição de ensino:</string>
    <string name="dataConclu">Data de Conclusão:</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="area">Área de Atuação:</string>
    <string name="email">E-Mail:</string>
    <string name="inst">inst</string>
    
    <string-array name="escolaridade">
        
        <item>Selecione...</item>
        <item>Analfabeto</item>
        <item>Alfabetizado</item>
        <item>1º a 4º inconpleto</item>
        <item>1º a 4º completo</item>
        <item>5º a 8º incompleto</item>
        <item>5º a 8º completo</item>
        <item>2º grau incompleto</item>
        <item>2º grau completo</item>
        <item>Superior incompleto</item>
        <item>Superior completo</item>
        <item>Especialização</item>
        <item>Mestrado/Doutorado</item>
        
    </string-array>
    <string name="nomeEmpresa">Nome Empresa:</string>
    
</resources>